# tts_webui_extension.xtts_ft_demo

./: .gitignore  pyproject.toml  setup.py
.github/workflows/: build_wheel.yml
extension_xtts_ft_demo/: main.py
tts_webui_extension/xtts_ft_demo/: main.py
