[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tts_webui_extension.xtts_ft_demo"
version = "0.0.1"
description = "XTTS fine-tuning demo"
authors = [
    {name = "rsxdalv"}
]
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "coqui-tts==0.26.0",
    "faster_whisper",
]

[project.urls]
Homepage = "https://github.com/rsxdalv/extension_xtts_ft_demo"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
# This will find all namespace packages automatically
namespaces = true
